# fin_data

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
data/review_exports/: 000651_2025_quarterly_f9707812-56f6-4500-90ee-a94185c89fb8_statements.xlsx
docs/: README.md  cli-usage.md  design.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design/: financial-report-extraction-system-design.md
docs/plans/: 2026-05-31-mvp.md  2026-06-06-parallel-extraction-roadmap.md  2026-06-06-pdf-profiler-design.md  2026-06-06-pdfplumber-raw-table-extraction-design.md  2026-06-06-pdfplumber-raw-table-extraction-implementation.md  2026-06-06-real-pdf-smoke-results.md  2026-06-06-table-classifier-design.md  2026-06-06-table-classifier-page-context.md  2026-06-07-balance-sheet-fact-extractor-design.md  2026-06-07-balance-sheet-fact-extractor-results.md  2026-06-07-table-title-prefer-rules.md  2026-06-07-validation-runner-results.md  2026-06-13-hk-pdf-text-encoding-diagnostics-design.md  2026-06-13-hk-pdf-text-encoding-diagnostics-implementation.md
docs/research/: github-component-research.md
graphify-out/: .graphify_root
scripts/: run_meituan.py
tests/: test_audit_db.py  test_cli.py  test_extraction_runs.py  test_extractors.py  test_fact_extractor.py  test_hk_content_decoder.py  test_import_pdf.py  test_pdf_font_inspector.py  test_pdf_profiler.py  test_pdf_text_repair.py  test_review_workbook.py  test_rules.py  test_statement_workbook.py  test_table_classifier.py  test_trusted_publish.py  test_validation.py  test_validation_runner.py
(+47 files in other folders)
