[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-report-extractor"
version = "0.1.0"
description = "Local high-trust financial report extraction system"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "duckdb>=1.0",
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
camelot = ["camelot-py[cv]>=0.11"]
dev = ["pytest>=8.2"]

[project.scripts]
fin-report = "fin_report_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
